# nusantara-nlp

./: .gitignore  LICENSE  README.md  demo.py  pyproject.toml
.github/workflows/: publish.yml
nusantara/: __init__.py  pipeline.py
nusantara/normalizer/: __init__.py  emoji_conv.py  slang.py
nusantara/normalizer/data/: emoji_dict.json  slang_dict.json
nusantara/stemmer/: __init__.py  stemmer.py
nusantara/stemmer/kamus/: kata_dasar.txt
nusantara/stopword/: __init__.py  remover.py
nusantara/stopword/data/: stopwords_id.txt
nusantara/tokenizer/: tokenizer.py
tests/: test_all.py
